# ChangeLog for net-print/cups-filters
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.144 2015/03/26 11:28:11 ago Exp $

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
  Stable for ppc64, wrt bug #542158

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
  Stable for ppc, wrt bug #542158

  25 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
  Stable for ia64, wrt bug #542158

  14 Mar 2015; Markus Meier <maekke@gentoo.org> cups-filters-1.0.66.ebuild:
  arm stable, bug #542158

  13 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
  Stable for x86, wrt bug #542158

  13 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
  Stable for amd64, wrt bug #542158

  09 Mar 2015; Jeroen Roovers <jer@gentoo.org> cups-filters-1.0.66.ebuild:
  Stable for HPPA (bug #542158).

*cups-filters-1.0.66 (04 Mar 2015)

  04 Mar 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-filters-1.0.66.ebuild, cups-filters-9999.ebuild:
  Version bump

  24 Feb 2015; Michał Górny <mgorny@gentoo.org> cups-filters-1.0.65.ebuild:
  Remove /usr/bin/foomatic-rip on USE=-foomatic as well.

*cups-filters-1.0.65 (14 Feb 2015)

  14 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  cups-filters-1.0.53.ebuild, -cups-filters-1.0.54.ebuild,
  cups-filters-1.0.61.ebuild, +cups-filters-1.0.65.ebuild,
  cups-filters-9999.ebuild, +files/cups-filters-1.0.65-poppler0310.patch:
  Version bump, add patch for building with poppler-0.31.0 (bug 539492)

  13 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  cups-filters-1.0.53.ebuild, cups-filters-1.0.54.ebuild,
  cups-filters-1.0.61.ebuild, cups-filters-9999.ebuild:
  Replace perl-module_src_prep with perl-module_src_configure

  26 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  cups-filters-1.0.53.ebuild, cups-filters-1.0.54.ebuild,