@@ -12,24 +12,24 @@ DIST cups-filters-1.0.66.tar.xz 1335740 SHA256 a46eea35d8c151f1f63c663c5dda290ba
 EBUILD cups-filters-1.0.53.ebuild 3655 SHA256 586b731e89d3c97ab1ba09d347e133a79bc9b18bd5ce8e34455d14838cce6f44 SHA512 27da1b3feb9e55511eae5325709e0b6371cc0eff68e426bb705809f8bd493e5ddba8c8156ae1bf6952e50c629f6315b16182a8b6fcf3e7b79453cd9ca2cf6499 WHIRLPOOL 88d75b06b368a4014b6ffb7ac394b74c0a3918e357fc3b81270fd8f7fcd61aaa00bfe65aa645d36869cb1cabe0d1dc93fe58a646ce01353e3b14f65ae42c8c58
 EBUILD cups-filters-1.0.61.ebuild 3320 SHA256 fd620dc5842b9f851717b861adaf2fedb29f2df81e30839594501b2f77bd8a88 SHA512 0993c498f3d36959c21bc1bc891f94f68c445625cec76f72fc4d7c56da9986d6acd841349ee988c1ad7fd1255e981db270886b091fbc52d2b34a27e7fe7bb463 WHIRLPOOL 32c99184b9fedbfd3e5b50ba03329b831e09f72944569941b1a1810522015c6c9b4fb2ed730143813fd8e930e13ebdf0dd77e78c938c312361aefd0c25381483
 EBUILD cups-filters-1.0.65.ebuild 3404 SHA256 ba4bc777b3ffa68fb8d4b484abbd2ba2530c1a4997082a92eefacda9eb145dea SHA512 2dc8c2dbdb6c7e00bfc572d8c32c49139f10ba6c965e77fea59bd99e3fbdf0d9d4126d0efee2c4a698936471aaf04bc63a8e85649159ca2ab64798303ad1e719 WHIRLPOOL 125933e3c42eb88f86b32ae7df98b3128c4b979d1fa587cdf75bcefad4eb855630bc46d78d084b47e9508cd0f1cfe9a179d33c0e6638b64af09dc6f8929b98d1
-EBUILD cups-filters-1.0.66.ebuild 3378 SHA256 a87e1b5aa3f78fcb2ec8f88dd1ef3c34d61ce1b7ae3e930d667d8f89b1f5334f SHA512 1a93733652786bd0c30ee870b74bfacb1ba008f30edc2fbd3d28bad8884522f06dd61e69d33aa6229a3474204b54ebb7dd1de927558466934b64ed1f58381f10 WHIRLPOOL 1bf28bb805022d6c6fdc606c0217cfe637e0f10c4b3c4bbe21e32418965bcd59f1f4d77539591ab987dcf336c401bbbc67b07e0e5afe19dceb46c58f4f0f18eb
+EBUILD cups-filters-1.0.66.ebuild 3383 SHA256 a3104291cbf7790f1e2ab20946c693a76b75d00d1a2258e18773fdf524709493 SHA512 0ece6fe3ca1a7ac9930689119f273e7699fe77dc0eb1ab862292246ad43a2a1bee1d3bbbca328468c9fcce11629fe92be87df7a92e3a6eb2508c60de06750ad8 WHIRLPOOL 115f8a9c4239235e2e21286cf35d40d4f18659417b2d564d873eefec1954844f503ee706bfe6df9b48a9adb00f14e7999bd81402693768154268b19f9d2ebfb2
 EBUILD cups-filters-9999.ebuild 3357 SHA256 727034332dfe920bbca2b5d44cfb1a05b00d018e9d696bb6fa5337849db64fe1 SHA512 cc4603568a5e0e32e9ba0d263b09f796146cac0be117de4c64f7d9568b29e958baafc72c0c5287b51c08c4af6ca2bccbde1e41eb9d2f3c443cac62133a680f80 WHIRLPOOL 5ae5a685ea457a86423726145e448e9200a5f1cbe694c1e9fadbd8179759591dac536b18cb29a37f037407fe1934283b0c511b81287fda30c1f6208b9739f788
-MISC ChangeLog 23104 SHA256 4d44228e85bc7169a176240dadee073cbb077bc78c84c4bdc6b1c89703172040 SHA512 2df5349a730f554b46f54b95c25b1d6d806e069e7e86b71cda5a4e8ae111d2fbca400705d99e80032386049cdfc3f21b51c1c55ec3bcd8a9da727af032a02d00 WHIRLPOOL 1c3b7a84a36dfa52367ff594d0f2e96ab39b6c4c56c03cd2252c3d2bb7214ed885a86a9dd21d97dbb6bdd5675eff5b3d0e0e026c44b9878c285928b5cdc08518
+MISC ChangeLog 23218 SHA256 22d2e5bcb9cc1d6e2cc25980c96d4d188db74b24a268efeaa62beed49ec11c51 SHA512 0f9c23c354717b363319a5321bd3f2a8659645790fa6763848a31733baaa871ef4de487b29cbdc41928a3523a7e2973cc8e82d95ecab269a6cf066e2e41a604a WHIRLPOOL 1501ebcff51ccbfa0e7c87d2c2cdc5d583837b5c19a4f0899f572ed06f12ff41f1c89dc89fae0edb58f143b3b5dc307842cb1967be6dedb0b4c7c863a3a9eae6
 MISC metadata.xml 290 SHA256 07d21bc9b73af41131dc35b0b30829bb124443a931df199fad5720fd0c6ecb82 SHA512 8614acef9fc5a0d78a7c65ce34d79189c2496946a4bccb215b9404abdc0c821ee89f3a89892e2c320359063fc43750c9e9581b7fb732d9d710ff7bb2dd6229db WHIRLPOOL a0ef99c415a6e3dea7f7c0f2349ea67ce76e8361f36d1f8c828d136ebf01e4d3a5b1038aba6aea92843ab67bed68c38a0a841f3620e7d46aa205360694e682ba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVE+1MAAoJELp701BxlEWfyr8P/A6Zgv/Z60ybyInv5pH89Z2j
-oqSkpTJQY+3INcOifPXjFAskSo1OrEmDrR9lw7Vee5gpqOIpOQ4z9Z7JFsLuJTrY
-cgvNLpEFh3Oo435Qfgvb9JS0/lrrjeEE0++22DV1l7rYCa8DMGbF2IBA7SzpDsu5
-mkShIu6fs8LysvzOQegU+DxYNkXTFpvnMu/dTAJeUzC/T772gX9abLZi/zlHG9me
-9sb7sTvrNjcmcdlhPrtaFUnspLp7OB/9924BgJHIa6bvVAimT7iCx8/u0xJqVMaW
-uum7HKhO08cFGzUzLr7Jdh2Ol0jPvxB4XskYmJvPrLoR4cmCplq0+fmnhnhjdRG5
-UXvIDErFkrkmZKWBVT7bOGXSwZXSFElTw6JRRdFYc4qEjIj8wEr1JTgTHz9d7zSU
-zbEIyqHNyNQNtpn98H7KKjqPcHU23IDB8sYg8mKmkGdsKbFfq5zO6ECq3QdEgdoz
-ReTZF6tNJzqpiXUK/l27m7pLQcIlxag4wPm4SzvuMGmY4wsKDWQoSgDNP2nfYf14
-2Opx4Dla3pLDFAvp7PG8mWzL9FbnDx+QlMo+NfR+ukO4OUw4mdWC2ZRJZMjJ2l8t
-Xze5QrTe5kd9RSPDurBXlrGdC8sHhpuo4J995VDwPV18Ba5+q0dD+XfugaA79/+L
-CdEtaeyod8K7WVByPDml
-=sFzw
+iQIcBAEBCAAGBQJVGRwuAAoJELp701BxlEWfbgIP/jLe/Kxii4h3PvBLOaaLqE/n
+SgcYNcOii6UPyZiROhOlqlJVeubHNDdRpPk09/Xk/esN6SP/Bd08HS/aQfIywLxS
+yLX4NymyyU4kkFCY6+/n7pXeMF0nALQIxubCskqDuSepj8xCDBL/9JHIzemGic7y
+ijdXN5HfzEC9H4htKbV+JzZFbCezknEPQYv61dP5P3Z+pn5KqbtFHiJP3AmgNog6
+hVT4YKtq7EVLFos/KKVwY/4Uxn3FeTuDrtK4KQjORB/ol9x9j05f/Xs9U9onVdVM
+sNeXxZXV8XcCEuIJBlA5slRNO7Om6rsP95bEiClw4n6A5lNSntdIAew5AkatxIRx
+xInGBHQW5E52bqPI/l3jo+Gckoyn9wOVmpj8Kgi7yDyq43I/LOK+6B3t0CskP0Qi
+vWqmArL8VlTnpqSclxUyKuAJ5uu9xHMdwsTFPTjEQxNLmhlJQ0YpkltlY1cjaR60
+7uVtdjvwHzuVl73QeWWsg+Yr081eN3eS4HWEUdbqoyj3bgoPHpFZLfqgdCwyuEXM
++Tu3nSD1C88TpFLO8lHLVLJhb40wypIJb8iMiHXfBMO2ShtK4jMX7+JpFfVrMaqg
+85iwI0C5bqSae3Gbnto9EreTG0ps8AWgh610AghVREBmiJZ4Q88XeYA8hws2VhMF
+OBhxDJ7zsA/DgheDsOnn
+=KWaY
 -----END PGP SIGNATURE-----
