@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups-filters
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.144 2015/03/26 11:28:11 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.145 2015/03/30 09:49:33 ago Exp $
+
+  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
+  Stable for sparc, wrt bug #542158
 
   26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> cups-filters-1.0.66.ebuild:
   Stable for ppc64, wrt bug #542158
